Pull/issue35 (#36)
* complete ability to upload multiple images, display them in a carousel, and delete individual images

* add link to navbar to new post page

* add some extra margin at the bottom of new post container

--- a/src/pages/newPost/newPost.css
+++ b/src/pages/newPost/newPost.css
@@ -1,5 +1,5 @@
 .npTitle {
-  color: #19467B;
+  color: #19467b;
   margin-top: 0;
 }
 
@@ -10,9 +10,10 @@
 }
 
 .npFormContainer {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding-bottom: 2%;
   border-radius: 8px;
+  margin-bottom: 50px;
 }
 
 .npTableElementTitleForum {
@@ -25,8 +26,14 @@
 
 .npUploadMedia {
   margin-left: 4.1%;
-} 
+}
 
 .npSubmitButton {
   float: right;
+}
+
+.npCarouselWrapper {
+  margin-left: 2%;
+  border-radius: 4px;
+  overflow: hidden;
 }
